--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<!-- Basic Page Needs
 	================================================== -->
 	<meta charset="utf-8">
-	<title>Typefolio</title>
+	<title>Mirko Viviano. Developer.</title>
 	<meta name="description" content=".">
 	<meta name="author" content="">
 	
@@ -73,18 +73,18 @@
 							<span class="count hide-on-mobile">01.</span>
 							About
 						</a>
-						<ul>
+						<!--<ul>
 							<li><a href="index-with-iosslider.html">Home w/ Slider</a></li>
 							<li><a href="index-with-flexslider.html">Home w/ Slider 2</a></li>
 							<li><a href="contact.html">Contact Us</a></li>
-						</ul>
+						</ul>-->
 					</li>
 					<li>
 						<a href="works-stackgrid-with-title.html">
 							<span class="count hide-on-mobile">02.</span>
 							Works
 						</a>
-						<ul>
+						<!--<ul>
 							<li><a href="works-stackgrid-images.html">Images Only</a></li>
 							<li><a href="works-architecture-three-columns.html">Architecture</a></li>
 							<li class="hide-on-mobile"><a href="works-architecture-two-columns.html">Two Columns</a></li>
@@ -95,16 +95,16 @@
 									<li><a href="single-photography-sidebar-left.html">Left Sidebar</a></li>
 								</ul>
 							</li>
-						</ul>
+						</ul>-->
 					</li>
 
 					<li>
-						<a href="shop.html">
-							<span class="count hide-on-mobile">03.</span>Shop
+						<a href="contact.html">
+							<span class="count hide-on-mobile">03.</span>Contact
 						</a>
-						<ul>
+						<!--<ul>
 							<li><a href="shop-item.html">Single Item</a></li>
-						</ul>
+						</ul>-->
 					</li>
 
 					<li>
@@ -112,9 +112,9 @@
 							<span class="count hide-on-mobile">04.</span>
 							Blog
 						</a>
-						<ul>
+						<!--<ul>
 							<li><a href="single-blog.html">Single Page</a></li>
-						</ul>
+						</ul>-->
 					</li>
 					
 				</ul><!-- // #nav -->
@@ -129,10 +129,12 @@
 				</div><!-- // .desktop-6 -->
 
 				<div class="desktop-6 columns">
-					<p class="site-desc">
-						Emily Bernd &amp; Associates<br />
-						<span class="font-color-primary">From product to all things digital</span>
-					</p><!-- // .site-desc -->
+					<h1 class="site-desc">
+						<pre>
+						   <h1>< D E V E L O P E R /></h1>
+						</pre>
+						<!--<span class="font-color-primary">From product to all things digital</span>-->
+					</h1><!-- // .site-desc -->
 				</div><!-- // .desktop-6 -->
 
 				<div class="clear"></div>
