--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<% include ../partials/header %>
+<% include partials/header %>
 	<!-- Works
 	================================================== -->
 	<section id="works">
@@ -127,4 +127,4 @@
 
 
 
-<% include ../partials/footer %>
+<% include ../partials/footer  %>
