--- a/index.html
+++ b/index.html
@@ -1,4 +1,150 @@
-<% include partials/header %>
+<!DOCTYPE html>
+<!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
+<!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
+<!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
+<head>
+
+	<!-- Basic Page Needs
+	================================================== -->
+	<meta charset="utf-8">
+	<title>Mirko Viviano. Developer.</title>
+	<meta name="description" content=".">
+	<meta name="author" content="">
+	
+	<!-- Mobile Specific Metas
+	================================================== -->
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	
+	<!-- CSS Files
+	* cssreset-min.css 			- CSS reset
+	* typegrid.css				- Responsive grid system
+	* style.css					- Main CSS file
+	
+	Original LESS Stylesheet
+	<link rel="stylesheet/less" type="text/css" href="css/style.less" />
+	================================================== -->
+	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.8.0/build/cssreset/cssreset-min.css">
+	<link rel="stylesheet" type="text/css" href="css/typegrid.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+
+
+		
+	<!--[if lt IE 8]>
+		<script src="http://ie7-js.googlecode.com/svn/version/2.1(beta4)/IE8.js"></script>
+	<![endif]-->
+
+	<!--[if lt IE 9]>
+		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+	<![endif]-->
+
+	<link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,300' rel='stylesheet' type='text/css'>
+
+	<!-- Favicons
+	================================================== -->
+	<link rel="shortcut icon" href="images/favicon.ico">
+	<link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+	
+	<!-- Loader
+	================================================== -->
+	<!-- <script src="js/pace.js"></script>
+  	<link href="css/loader.css" rel="stylesheet" /> -->
+</head>
+
+<body>
+
+
+	<!-- Header - Half Logo
+	================================================== -->
+	<section id="header">
+
+		<!-- * * * * * * * * * * * * * * * * * * * * * * *
+
+			Top Bar & Menu (#nav)
+
+		* * * * * * * * * * * * * * * * * * * * * * * * -->
+		<div class="topbar">
+			<div class="container">
+					
+				<!--
+					A custom jQuery plugin called typeMenu handles the menu
+					Add .hide-on-mobile to <li> elements to hide a specific item on mobile viewports
+				-->
+				<ul id="nav" class="full">
+					<li>
+						<a href="about">
+							<span class="count hide-on-mobile">01.</span>
+							About
+						</a>
+						<!--<ul>
+							<li><a href="index-with-iosslider.html">Home w/ Slider</a></li>
+							<li><a href="index-with-flexslider.html">Home w/ Slider 2</a></li>
+							<li><a href="contact.html">Contact Us</a></li>
+						</ul>-->
+					</li>
+					<li>
+						<a href="">
+							<span class="count hide-on-mobile">02.</span>
+							Works
+						</a>
+						<!--<ul>
+							<li><a href="works-stackgrid-images.html">Images Only</a></li>
+							<li><a href="works-architecture-three-columns.html">Architecture</a></li>
+							<li class="hide-on-mobile"><a href="works-architecture-two-columns.html">Two Columns</a></li>
+							<li>
+								<a href="single-photography-sidebar-right.html">Single</a>
+								<ul>
+									<li><a href="single-photography-full-width.html">Full Width</a></li>
+									<li><a href="single-photography-sidebar-left.html">Left Sidebar</a></li>
+								</ul>
+							</li>
+						</ul>-->
+					</li>
+
+					<li>
+						<a href="">
+							<span class="count hide-on-mobile">03.</span>Contact
+						</a>
+						<!--<ul>
+							<li><a href="shop-item.html">Single Item</a></li>
+						</ul>-->
+					</li>
+
+					<li>
+						<a href="">
+							<span class="count hide-on-mobile">04.</span>
+							Blog
+						</a>
+						<!--<ul>
+							<li><a href="single-blog.html">Single Page</a></li>
+						</ul>-->
+					</li>
+					
+				</ul><!-- // #nav -->
+
+			</div><!-- // .container -->
+		</div><!-- // .topbar -->
+
+		<div class="logo-wrap">
+			<div class="container">
+				<div class="desktop-6 columns">
+					<h1><a href="/" title="Home"><img src="images/logo_text_half.png" alt="" /></a></h1>
+				</div><!-- // .desktop-6 -->
+
+				<div class="desktop-6 columns">
+					<h1 class="site-desc">
+						<pre>
+						   <h1>< D E V E L O P E R /></h1>
+						</pre>
+						<!--<span class="font-color-primary">From product to all things digital</span>-->
+					</h1><!-- // .site-desc -->
+				</div><!-- // .desktop-6 -->
+
+				<div class="clear"></div>
+			</div><!-- // .container -->
+		</div><!-- // .logo-wrap -->
+	</section><!-- // #header -->
+
 	<!-- Works
 	================================================== -->
 	<section id="works">
@@ -127,4 +273,72 @@
 
 
 
-<% include ../partials/footer  %>
+
+	<!-- Footer
+	================================================== -->
+	<section id="footer">
+		<div class="container">
+			<div class="desktop-8 columns">
+				<p>Copyright &copy; Mirko Viviano. <small>Template forked from <a href="https://github.com/subwaymatch/typefolio">Typefolio - @subwaymatch</a></p>
+			</div><!-- // .desktop-3 -->
+
+			<div class="desktop-4 columns">
+				<ul id="social">
+					<li><a href="http://www.twitter.com" class="hoverMe">Twitter</a></li>
+					<li><a href="http://www.twitter.com" class="hoverMe">GitHub</a></li>
+					<li><a href="http://www.twitter.com" class="hoverMe">Telegram</a></li>
+					<li><a href="http://www.twitter.com" class="hoverMe">Steemit</a></li>
+				</ul><!-- // #social -->
+			</div><!-- // .desktop-9 -->
+
+			<div class="clear"></div>
+		</div><!-- // .container -->
+		<div class="container">
+			<div class="desktop-12 columns text_center">
+				<img src="images/btc_payment.png" width="100">
+			</div>
+		</div>
+	</section><!-- // section#footer -->
+
+
+	<!-- JS
+	================================================== -->
+	<!-- 
+		Flexslider 2.1 has known issues of manualControls setting with jQuery 1.9~
+		Use jQuery 1.8 until Flexslider 2.2 stable version is released
+	-->
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
+	<script src="js/jQuery.BlackAndWhite.min.js"></script>
+	<script src="js/modernizr.js"></script>
+	<script src="js/less-1.4.0.min.js"></script>
+	<script src="js/jquery.typeMenu.js"></script>
+	<script src="js/jquery.typeSticky.js"></script>
+	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDKS4S_HNSOFEFxUUY9C4qJqGAMuBSXcyI"></script>
+    <script src="js/gmaps.js"></script>
+	<script src="js/jquery.custom.js"></script>
+	<script type="text/javascript">
+		function getFormMessage(type){
+			switch(type){
+				default:
+				case type = "success":
+					document.getElementById("form-messages").innerHTML = "<div id=\'contact-success\'>Email successfuly sent, thank you.<br /></div>";
+					setTimeout(function () {
+					  	$('#form-messages').fadeOut('fast');
+					}, 3000);
+				break;
+				case type="failed":
+					document.getElementById("form-messages").innerHTML = "<div id=\'contact-warning\'>Email not sent, please try again.<br /></div>";
+					setTimeout(function () {	
+						$('#form-messages').fadeOut('fast');
+					}, 3000);
+				break;
+			}
+			
+		}
+	</script>
+
+
+<!-- End Document
+================================================== -->
+</body>
+</html>
