--- a/index.html
+++ b/index.html
@@ -70,44 +70,24 @@
 					A custom jQuery plugin called typeMenu handles the menu
 					Add .hide-on-mobile to <li> elements to hide a specific item on mobile viewports
 				-->
-				<ul id="nav" class="full">
+				<!-- <ul id="nav" class="full">
 					<li>
 						<a href="">
 							<span class="count hide-on-mobile">01.</span>
 							About
 						</a>
-						<!--<ul>
-							<li><a href="index-with-iosslider.html">Home w/ Slider</a></li>
-							<li><a href="index-with-flexslider.html">Home w/ Slider 2</a></li>
-							<li><a href="contact.html">Contact Us</a></li>
-						</ul>-->
 					</li>
 					<li>
 						<a href="">
 							<span class="count hide-on-mobile">02.</span>
 							Works
 						</a>
-						<!--<ul>
-							<li><a href="works-stackgrid-images.html">Images Only</a></li>
-							<li><a href="works-architecture-three-columns.html">Architecture</a></li>
-							<li class="hide-on-mobile"><a href="works-architecture-two-columns.html">Two Columns</a></li>
-							<li>
-								<a href="single-photography-sidebar-right.html">Single</a>
-								<ul>
-									<li><a href="single-photography-full-width.html">Full Width</a></li>
-									<li><a href="single-photography-sidebar-left.html">Left Sidebar</a></li>
-								</ul>
-							</li>
-						</ul>-->
 					</li>
 
 					<li>
 						<a href="">
 							<span class="count hide-on-mobile">03.</span>Contact
 						</a>
-						<!--<ul>
-							<li><a href="shop-item.html">Single Item</a></li>
-						</ul>-->
 					</li>
 
 					<li>
@@ -115,13 +95,10 @@
 							<span class="count hide-on-mobile">04.</span>
 							Blog
 						</a>
-						<!--<ul>
-							<li><a href="single-blog.html">Single Page</a></li>
-						</ul>-->
 					</li>
 					
-				</ul><!-- // #nav -->
-
+				</ul>
+ -->
 			</div><!-- // .container -->
 		</div><!-- // .topbar -->
 
@@ -269,6 +246,11 @@
 				<div class="clear"></div>
 			
 		</div><!-- // .container -->
+
+		<div class="hireMe">
+			<a href="Mirko_Viviano_resume.pdf">Download Resume</a>
+		</div>
+
 	</section><!-- // section#works -->
 
 
