--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 	================================================== -->
 	<meta charset="utf-8">
 	<title>Mirko Viviano. Developer.</title>
-	<meta name="description" content=".">
-	<meta name="author" content="">
+	<meta name="description" content="My approach to technologies’ world started the day my father brought home a computer. Since then, I did not even know what a computer was, but my great passion for technologies started in that precise moment.">
+	<meta name="author" content="Mirko Viviano">
+	<meta name="keywords" content="HTML, CSS, XML, JavaScript, PHP, Developer, development, website, technologies, google, web developer, web designer, web design, coding, programming, web agency, italy, napoli, naples">
 	
 	<!-- Mobile Specific Metas
 	================================================== -->
