--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 			<div class="desktop-12 columns"><div class="border-top"></div></div>
 
 			
-				<a href="https://github.com/mirkoviviano/UniBank" class="permalink">
+				<a href="https://github.com/mirkoviviano/UniBank" target="_blank" class="permalink">
 					<div class="desktop-3 mobile-half columns">
 						<div class="item first-row">
 							<h3>UniBank (Home Banking)</h3>
@@ -163,7 +163,7 @@
 					</div><!-- // .desktop-3 -->
 				</a>
 				
-				<a href="https://github.com/mirkoviviano/Quarto-Game-" class="permalink">
+				<a href="https://github.com/mirkoviviano/Quarto-Game-" target="_blank" class="permalink">
 					<div class="desktop-3 mobile-half columns">
 						<div class="item first-row">
 							<h3>Quarto! (GAME)</h3>
@@ -209,7 +209,7 @@
 					</div><!-- // .desktop-3 -->
 				</a>
 				
-				<a href="http://www.villacorallo.it/" class="permalink">
+				<a href="http://www.villacorallo.it/" target="_blank" class="permalink">
 					<div class="desktop-3 mobile-half columns">
 						<div class="item">
 							<h3>Villa Corallo</h3>
