Added Ko-Fi support button

--- a/index.html
+++ b/index.html
@@ -273,6 +273,9 @@
 			<div class="desktop-12 columns text_center">
 				<img src="images/btc_payment.png" width="100">
 			</div>
+			<div class="desktop-12 columns text_center">
+					<script type='text/javascript' src='https://ko-fi.com/widgets/widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Support Me on Ko-fi', '#46b798', 'P5P7KJLY');kofiwidget2.draw();</script> 
+			</div>
 		</div>
 	</section><!-- // section#footer -->
 
